--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,15 +90,15 @@
         <tr>
           <td>{{porcetaje}}</td>
           <td>percent:'2.2-2'</td>
-          <td>{{porcetaje | percent:'2.2-2'}}</td>
+          <td>{{moneda | percent:'2.2-2'}}</td>
         </tr>
 
 
 
         <tr>
           <td>{{moneda}}</td>
-          <td>currency</td>
-          <td>{{porcetaje | currency}}</td>
+          <td>currencyMoney</td>
+          <td>{{moneda | currency}}</td>
         </tr>
 
         
